Script - test dei menu a tendina

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/favicon.ico">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>Revolut | Replica</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
   <div class="cookie-bar flex">
     <div class="wrapper cookie flex">
       <div class="box flex">
-        <p>We use cookies <span> <img class="icon" src="img/cookie.svg" alt="icona a forma di biscotto"> </span> to personalise your experience on Revolut. <a class="blue" href="#"> Learn more.</a></p>
+        <p>We use cookies <span><img class="icon" src="img/cookie.svg" alt="icona a forma di biscotto"> </span> to personalise your experience on Revolut. <a class="blue" href="#"> Learn more.</a></p>
       </div>
       <div class="box flex">
         <ul class="flex">
@@ -24,7 +25,6 @@
           <li><button class="btn cookies"><a href="#">Accept</a></button></li>
         </ul>
       </div>
-
     </div>
   </div>
   <!--barra dei cookies -->
@@ -50,11 +50,26 @@
       <!-- nav destra dell'header -->
       <nav>
         <ul class="flex right">
-          <li>
-            <a href="#">Features</a>
+          <li class="relative">
+            <a class="toggle-menu" href="#">Features</a>
+            <!-- menu a tendina nascosto -->
+            <ul class="nav-menu">
+              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">ambaraba</a> </li>
+            </ul>
+            <!-- menu a tendina nascosto -->
           </li>
-          <li>
-            <a href="#">Plans</a>
+          <li class="relative">
+            <a class="toggle-menu" href="#">Plans</a>
+            <!-- menu a tendina nascosto -->
+            <ul class="nav-menu">
+              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">ambaraba</a> </li>
+            </ul>
           </li>
           <li>
             <a href="#">About Us</a>
