--- a/index.html
+++ b/index.html
@@ -50,32 +50,60 @@
       <!-- nav destra dell'header -->
       <nav>
         <ul class="flex right">
-          <li class="relative">
-            <a class="toggle-menu" href="#">Features</a>
+          <li class="relative toggle-menu">
+            <a href="#">Features</a>
             <!-- menu a tendina nascosto -->
             <ul class="nav-menu">
-              <li> <a href="#">ambaraba</a> </li>
-              <li> <a href="#">ambaraba</a> </li>
-              <li> <a href="#">ambaraba</a> </li>
-              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">Standard</a></li>
+              <li> <a href="#">Plus</a></li>
+              <li> <a href="#">Premium</a></li>
+              <li> <a href="#">Metal</a></li>
+              <li> <a href="#">Compare plans</a></li>
             </ul>
             <!-- menu a tendina nascosto -->
           </li>
-          <li class="relative">
+          <li class="relative toggle-menu">
             <a class="toggle-menu" href="#">Plans</a>
             <!-- menu a tendina nascosto -->
             <ul class="nav-menu">
-              <li> <a href="#">ambaraba</a> </li>
-              <li> <a href="#">ambaraba</a> </li>
-              <li> <a href="#">ambaraba</a> </li>
-              <li> <a href="#">ambaraba</a> </li>
+              <li> <a href="#">Help centre</a></li>
+              <li> <a href="#">Community</a></li>
+              <li> <a href="#">Security</a></li>
+              <li> <a href="#">System Status</a></li>
+              <li> <a href="#">Developer APIs</a></li>
             </ul>
+            <!-- menu a tendina nascosto -->
           </li>
-          <li>
+          <li class="relative toggle-menu">
             <a href="#">About Us</a>
+            <!-- menu a tendina nascosto -->
+            <ul class="nav-menu">
+              <li> <a href="#">About us</a>  </li>
+              <li> <a href="#">Blog</a></li>
+              <li> <a href="#">Leadership</a></li>
+              <li> <a href="#">Newsroom</a></li>
+              <li> <a href="#">Affiliates</a></li>
+              <li> <a href="#">Influencers</a></li>
+              <li> <a href="#">Careers</a></li>
+              <li> <a href="#">Culture</a></li>
+              <li> <a href="#">Diversity & Inclusion</a></li>
+              <li> <a href="#">Contact</a></li>
+
+
+            </ul>
+            <!-- menu a tendina nascosto -->
           </li>
-          <li>
+          <li class="relative toggle-menu">
             <a href="#">Help</a>
+            <!-- menu a tendina nascosto -->
+            <ul class="nav-menu">
+              <li> <a href="#">Help centre</a> </li>
+              <li> <a href="#">Community</a> </li>
+              <li> <a href="#">Security</a> </li>
+              <li> <a href="#">System Status</a> </li>
+              <li> <a href="#">Developer APIs</a> </li>
+            </ul>
+            <!-- menu a tendina nascosto -->
           </li>
           <li>
             <button class="btn"><a href="#">Sign in</a></button>
